--- a/MyBlog/src/main/resources/application.properties
+++ b/MyBlog/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.servlet.session.timeout=1200
 
 # HikariCP DataSource / MySQL연동
 spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/webportfolio?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://ohsky97.clqycom0iuh5.ap-northeast-2.rds.amazonaws.com:3306/myblog?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=ohs921877
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
