--- a/MyBlog/src/main/resources/application.properties
+++ b/MyBlog/src/main/resources/application.properties
@@ -58,7 +58,9 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
 
-
+# security를 쓰면 로그아웃, 로그인이 일어날 경우 리다이렉트를 https가 아닌 http로 한다.
+# 그 문제를 해결 하기 위해 적용
+server.tomcat.remoteip.protocol-header=x-forwarded-proto
 
 
 
