--- a/MyBlog/build.gradle
+++ b/MyBlog/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'commons-io:commons-io:2.6' // file
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws' // aws s3 file upload
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -55,6 +56,12 @@ dependencies {
 	compile group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16' /* Log4jdbc */
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.9'
     
+}
+
+dependencyManagement { 
+	imports { 
+		mavenBom 'org.springframework.cloud:spring-cloud-aws:2.2.1.RELEASE' 
+	}
 }
 
 test {
