--- a/MyBlog/src/main/resources/application.properties
+++ b/MyBlog/src/main/resources/application.properties
@@ -63,7 +63,12 @@ spring.servlet.multipart.max-request-size=20MB
 server.tomcat.remoteip.protocol-header=x-forwarded-proto
 
 
-
+# aws s3
+cloud.aws.credentials.accessKey=AKIAI5MXC2PN3I57KHTQ
+cloud.aws.credentials.secretKey=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
+cloud.aws.s3.bucket=hs-bucket
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
 
 
 
