--- a/MyBlog/src/main/resources/application.properties
+++ b/MyBlog/src/main/resources/application.properties
@@ -60,7 +60,7 @@ spring.servlet.multipart.max-request-size=20MB
 
 # security를 쓰면 로그아웃, 로그인이 일어날 경우 리다이렉트를 https가 아닌 http로 한다.
 # 그 문제를 해결 하기 위해 적용
-server.tomcat.remoteip.protocol-header=x-forwarded-proto
+server.tomcat.protocol-header=x-forwarded-proto
 
 
 # aws s3
